MacViews: Fix crash due to failed DCHECK in BridgedNativeWidget.

BridgedNativeWidget::NotifyVisibilityChangeDown() currently has DCHECKs to
ensure that
- When a window is hidden, all its child windows are hidden and removed from its
  child window list.
- When a window is made visible, all its child windows which want to become
  visible are made visible and added to its child window list.

However, this does not account for windows which may be added by AppKit, for
example, the Mac Dictionary popup. This CL modifies the DCHECKs to correctly
account for windows added by AppKit.

BUG=653325

Review-Url: https://codereview.chromium.org/2396883004
Cr-Commit-Position: refs/heads/master@{#423450}

Former-commit-id: 93d211ca178ee90dc77d3825cdd1c7fd3ce5f021